fix navbar going under body text when cramped

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ h1, h2, h3, h4, h5, h6 {
 	border-color: #ECF0F1;
 	margin-bottom: 0;
 	border-radius: 0;
+	z-index: 9999;
 }
 
 @media (min-width: 768px) {
